# Clinical-NLP-Pipeline

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
configs/: default.yaml
data/resources/: abbreviations_5200.tsv
resources/: abbreviations_5200.tsv
scripts/: benchmark_api.py  convert_i2b2_like.py  evaluate_pipeline.py  generate_synthetic.py  train_bilstm_crf.py  train_transformer_ner.py
src/clinical_nlp/: schemas.py
src/clinical_nlp/api/: main.py
src/clinical_nlp/data/: io.py  synthetic.py
src/clinical_nlp/deid/: categories.py  detector.py
src/clinical_nlp/models/: bilstm_crf.py  ensemble.py  tokenization.py  transformer_ner.py
src/clinical_nlp/pipeline/: engine.py
src/clinical_nlp/preprocessing/: abbreviations.py  pipeline.py  segmenter.py
src/clinical_nlp/training/: labeling.py
tests/: test_api.py  test_deid.py  test_preprocessing.py
